--- a/demo/basic.html
+++ b/demo/basic.html
@@ -1,3 +1,4 @@
+{% raw %}
 <div class="appa">
   <VueFileAgent
     v-model="filesData"
@@ -20,3 +21,4 @@
   </div> -->
   <!-- </div></div> -->
 </div>
+{% endraw %}
