--- a/404.html
+++ b/404.html
@@ -18,7 +18,13 @@ layout: default
  -->
 <div class="container">
   <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
+  <!-- <p><strong>Page not found :(</strong></p> -->
   <p>The requested page could not be found.</p>
+  <p>
+    <a href="{{ "/" | prepend: site.baseurl }}">
+      <strong>
+        Go Home
+      </strong>
+    </a>
+  </p>
 </div>
