Fix website issues

--- a/website/demo/advanced.html
+++ b/website/demo/advanced.html
@@ -42,25 +42,25 @@
           <input id="advanced-demo-upload-url" class="form-control" type="text" v-model="uploadUrl">
         </div>
       </div>
-      <div class="col-md-2 px-2">
+      <div class="col-6 col-md-2 px-2">
         <div class="custom-control custom-checkbox mt-1">
           <input type="checkbox" class="custom-control-input" id="advanced-demo-meta" v-model="meta">
           <label class="custom-control-label" for="advanced-demo-meta">:meta</label>
         </div>
       </div>
-      <div class="col-md-2 px-2">
+      <div class="col-6 col-md-2 px-2">
         <div class="custom-control custom-checkbox mt-1">
           <input type="checkbox" class="custom-control-input" id="advanced-demo-multiple" v-model="multiple">
           <label class="custom-control-label" for="advanced-demo-multiple">:multiple</label>
         </div>
       </div>
-      <div class="col-md-2 px-2">
+      <div class="col-6 col-md-2 px-2">
         <div class="custom-control custom-checkbox mt-1">
           <input type="checkbox" class="custom-control-input" id="advanced-demo-deletable" v-model="deletable">
           <label class="custom-control-label" for="advanced-demo-deletable">:deletable</label>
         </div>
       </div>
-      <div class="col-md-2 px-2">
+      <div class="col-6 col-md-2 px-2">
         <div class="custom-control custom-checkbox mt-1">
           <input type="checkbox" class="custom-control-input" id="advanced-demo-compact" v-model="compact">
           <label class="custom-control-label" for="advanced-demo-compact">:compact</label>
