--- a/upload-server-examples/index.html
+++ b/upload-server-examples/index.html
@@ -11,8 +11,8 @@
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/assets/github-markdown.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@latest/dist/vue-file-agent.css">
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/github-markdown.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.css">
   </head>
   <body>
     <div id="app">
@@ -20,7 +20,7 @@
         <div>              
           <h3>
             <a href="/vue-file-agent/">
-              Vue File Agent
+              🖼 Vue File Agent
             </a>
           </h3>
           <div style="color: #ACB5BD">
@@ -36,7 +36,7 @@
 
       <div class="container">
         <div id="docs" name="docs"></div>
-        <div class="markdown-body" style="margin: 40px 0;" v-pre>
+        <div class="markdown-body" style="margin: 40px 0;">
           <h1 id="upload-server-examples">Upload Server Examples</h1>
 
 <h2 id="node-js">Node Js</h2>
@@ -54,11 +54,13 @@ node upload-server.js
 
 <p>Change Upload URL to: <code class="highlighter-rouge">http://localhost/upload-server-examples/php/upload-server.php</code></p>
 
-
         </div>
       </div>
       <div class="container">
-        <demo-advanced></demo-advanced>
+        <div id="demo-basic-mount"></div>
+        <div id="demo-advanced-mount">
+          <demo-advanced></demo-advanced>
+        </div>
       </div> 
       <div class="bg-secondary text-white mt-5 py-3">
         <div class="container">
@@ -71,12 +73,9 @@ node upload-server.js
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js" integrity="sha256-qq7wfY6gQJldAy+TGLT7UF/TqnfV4XFzGF/RzrVXq24=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@latest/dist/vue-file-agent.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.umd.js"></script>
 
-      <script type="text/javascript" id="demo-basic-script">
-    window.components = {};
-  </script>
-  <script type="text/x-template" id="demo-basic-template">
+      <script type="text/x-template" id="demo-basic-template">
     
 <div class="appa">
   <VueFileAgent
@@ -114,10 +113,10 @@ var filesData = [];
 [
   {"name":"sample.pdf","lastModified":1565232623243,"sizeText":"3 KB","size":3028,"type":"application/pdf","ext":"pdf"},
   {"name":"DSC_0261.jpg","lastModified":1564648335292,"sizeText":"64 KB","size":65762,"type":"image/jpeg","ext":"jpg"},
-  {"name":"Important sheet.ods","lastModified":1564392646095,"sizeText":"0 B","size":0,"type":"","ext":"ods"},
+  {"name":"Important sheet.ods","lastModified":1564392646095,"sizeText":"31 KB","size":31276,"type":"","ext":"ods"},
   videoData,
-  {"name":"Collection of something.zip","lastModified":1564392646087,"sizeText":"0 B","size":0,"type":"application/x-zip-compressed","ext":"zip"},
-  {"name":"Document 3.doc","lastModified":1564392646097,"sizeText":"0 B","size":0,"type":"","ext":"doc"},
+  {"name":"Collection of something.zip","lastModified":1564392646087,"sizeText":"2 MB","size":1640378,"type":"application/x-zip-compressed","ext":"zip"},
+  {"name":"Document 3.docx","lastModified":1564392646097,"sizeText":"109 KB","size":111303,"type":"","ext":"doc"},
 ].forEach(function(fd){
   fd.url = filesBaseUrl + fd.name;
   // fd.progress = 10;
@@ -144,6 +143,8 @@ var component = {
       }.bind(this), 400);
     },
     filesSelected: function(filesData){
+      console.log(filesData);
+      console.log(JSON.stringify(filesData));
       // manual handling
       // this.$refs.vueFileInput.upload(this.uploadUrl, filesData);
     },
@@ -158,8 +159,10 @@ var component = {
   }
 }
       component.template = '#demo-basic-template';
-      // Vue.component('demo-basic', component);
-      components['demo-basic'] = component;
+      var vm = new Vue({
+        el: '#demo-basic-mount',
+        components: {'demo-basic': component},
+      });
     })();
   </script>
 
@@ -199,33 +202,63 @@ var component = {
         </div>
       </div>
     </div>
-    <div>
-      <div class="input-group input-group-sm">
-        <div class="input-group-prepend">
-          <span class="input-group-text"><small>Upload URL</small></span>
+    <div class="row mx-n2">
+      <div class="col-md-4 px-2 mb-1">
+        <div class="input-group input-group-sm">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><small>Upload URL</small></span>
+          </div>
+          <input id="advanced-demo-upload-url" class="form-control" type="text" v-model="uploadUrl">
         </div>
-        <input id="advanced-demo-upload-url" class="form-control" type="text" v-model="uploadUrl">
+      </div>
+      <div class="col-6 col-md-2 px-2">
+        <div class="custom-control custom-checkbox mt-1">
+          <input type="checkbox" class="custom-control-input" id="advanced-demo-meta" v-model="meta">
+          <label class="custom-control-label" for="advanced-demo-meta">:meta</label>
+        </div>
+      </div>
+      <div class="col-6 col-md-2 px-2">
+        <div class="custom-control custom-checkbox mt-1">
+          <input type="checkbox" class="custom-control-input" id="advanced-demo-multiple" v-model="multiple">
+          <label class="custom-control-label" for="advanced-demo-multiple">:multiple</label>
+        </div>
+      </div>
+      <div class="col-6 col-md-2 px-2">
+        <div class="custom-control custom-checkbox mt-1">
+          <input type="checkbox" class="custom-control-input" id="advanced-demo-deletable" v-model="deletable">
+          <label class="custom-control-label" for="advanced-demo-deletable">:deletable</label>
+        </div>
+      </div>
+      <div class="col-6 col-md-2 px-2">
+        <div class="custom-control custom-checkbox mt-1">
+          <input type="checkbox" class="custom-control-input" id="advanced-demo-compact" v-model="compact">
+          <label class="custom-control-label" for="advanced-demo-compact">:compact</label>
+        </div>
       </div>
     </div>
   </div>
 
-  <VueFileAgent
-    ref="vueFileAgent"
-    :multiple="true"
-    :deletable="true"
-    :accept="valAccept"
-    :maxSize="valMaxSize"
-    :maxFiles="valMaxFiles"
-    :helpTextOld="'Choose images or zip files'"
-    :errorTextOld="{
-      type: 'Invalid file type. Only png or zip Allowed',
-      size: 'Files should not exceed 10MB in size',
-    }"
-    :meta="true"
-    @select="filesSelected($event)"
-    @delete="fileDeleted($event)"
-    v-model="filesData"
-  ></VueFileAgent>
+  <div class="mx-auto" :style="compact ? {width: '200px'} : {}">
+    <VueFileAgent
+      ref="vueFileAgent"
+      :uploadUrl="uploadUrl"
+      :multiple="multiple"
+      :meta="meta"
+      :deletable="deletable"
+      :compact="compact"
+      :accept="valAccept"
+      :maxSize="valMaxSize"
+      :maxFiles="valMaxFiles"
+      :helpTextOld="'Choose images or zip files'"
+      :errorTextOld="{
+        type: 'Invalid file type. Only png or zip Allowed',
+        size: 'Files should not exceed 10MB in size',
+      }"
+      @select="filesSelected($event)"
+      @delete="fileDeleted($event)"
+      v-model="filesData"
+    ></VueFileAgent>
+  </div>
 
 
   <div class="card card-body mt-3">
@@ -351,7 +384,12 @@ var component = {
       filesData: filesData,
       filesDataForUpload: [],
       uploadUrl: 'https://www.mocky.io/v2/5d4fb20b3000005c111099e3',
+      uploadUrl: 'http://localhost/safrazik/vue-file-agent/upload-server-examples/php/upload-server.php',
       uploadHeaders: {'X-Test-Header': 'vue-file-agent'},
+      meta: true,
+      multiple: true,
+      deletable: true,
+      compact: false,
       sortDirection: {
         lastModified: 'ASC',
         name: 'ASC',
@@ -464,7 +502,9 @@ var component = {
       // console.log('sortBy', prop, this.filesData);
       var ret = direction == 'DESC' ? -1 : 1;
       this.filesData = this.filesData.sort(function(fd1, fd2){
-        return fd1.file[prop] > fd2.file[prop] ? 1*ret : -1*ret;
+        var f1 = fd1.file || fd1;
+        var f2 = fd2.file || fd2;
+        return f1[prop] > f2[prop] ? 1*ret : -1*ret;
       });
       // console.log('sortBy after', prop, this.filesData);
     },
@@ -503,18 +543,11 @@ var component = {
   }
 }
       component.template = '#demo-advanced-template';
-      components['demo-advanced'] = component;
-      // Vue.component('demo-advanced', component);
+      var vm = new Vue({
+        el: '#demo-advanced-mount',
+        components: {'demo-advanced': component},
+      });
     })();
-  </script>
-
-  <script type="text/javascript">
-    // Vue.component
-
-    var vm = new Vue({
-      el: '#app',
-      components: components,
-    });
   </script>
 
 </body>
