--- a/upload-server-examples/index.html
+++ b/upload-server-examples/index.html
@@ -20,7 +20,7 @@
         <div>              
           <h3>
             <a href="/vue-file-agent/">
-              🖼 Vue File Agent
+              Vue File Agent
             </a>
           </h3>
           <div style="color: #ACB5BD">
