--- a/website/demo/advanced.html
+++ b/website/demo/advanced.html
@@ -1,172 +1,180 @@
 {% raw %}
-<div class="appa">
+<div class="row">
 
-  <div class="card card-body mb-3">
-    <div class="row mx-n2">
-      <div class="col-md-6 px-2">
-        <div class="input-group input-group-sm mb-2">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><small>:accept</small></span>
+  <div class="col-md-3 mb-3">
+    <div class="bg-light p-2">
+      <div class="row mx-n2">
+        <div class="col-md-12 col-12 px-2">
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><small>:accept</small></span>
+            </div>
+            <input class="form-control" type="text" v-model="valAccept" placeholder="e.g: image/*,video/*">
+            <div class="input-group-append">
+                <a class="btn btn-warning" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/file#Unique_file_type_specifiers" target="_blank">
+                  ?
+                </a>
+            </div>
           </div>
-          <input class="form-control" type="text" v-model="valAccept" placeholder="e.g: image/*,video/*">
-          <div class="input-group-append">
-              <a class="btn btn-warning" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/file#Unique_file_type_specifiers" target="_blank">
-                ?
-              </a>
+        </div>
+        <div class="col-md-12 col-6 px-2">
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><small>:maxSize</small></span>
+            </div>
+            <input class="form-control" type="text" v-model="valMaxSize" placeholder="e.g: 500KB, 2.5MB, 1GB">
+          </div>
+        </div>
+        <div class="col-md-12 col-6 px-2">
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><small>:maxFiles</small></span>
+            </div>
+            <input class="form-control" type="number" v-model="valMaxFiles" placeholder="e.g: 4">
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-6 px-2">
-        <div class="input-group input-group-sm mb-2">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><small>:maxSize</small></span>
+      <div class="row mx-n2">
+        <div class="col-md-12 px-2 mb-1">
+          <div class="input-group input-group-sm">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><small>Upload URL</small></span>
+            </div>
+            <input id="advanced-demo-upload-url" class="form-control" type="text" v-model="uploadUrl">
           </div>
-          <input class="form-control" type="text" v-model="valMaxSize" placeholder="e.g: 500KB, 2.5MB, 1GB">
         </div>
-      </div>
-      <div class="col-md-3 col-6 px-2">
-        <div class="input-group input-group-sm mb-2">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><small>:maxFiles</small></span>
+        <div class="col-6 col-md-12 px-2">
+          <div class="custom-control custom-checkbox mt-1">
+            <input type="checkbox" class="custom-control-input" id="advanced-demo-meta" v-model="meta">
+            <label class="custom-control-label" for="advanced-demo-meta">:meta</label>
           </div>
-          <input class="form-control" type="number" v-model="valMaxFiles" placeholder="e.g: 4">
         </div>
-      </div>
-    </div>
-    <div class="row mx-n2">
-      <div class="col-md-4 px-2 mb-1">
-        <div class="input-group input-group-sm">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><small>Upload URL</small></span>
+        <div class="col-6 col-md-12 px-2">
+          <div class="custom-control custom-checkbox mt-1">
+            <input type="checkbox" class="custom-control-input" id="advanced-demo-multiple" v-model="multiple">
+            <label class="custom-control-label" for="advanced-demo-multiple">:multiple</label>
           </div>
-          <input id="advanced-demo-upload-url" class="form-control" type="text" v-model="uploadUrl">
         </div>
-      </div>
-      <div class="col-6 col-md-2 px-2">
-        <div class="custom-control custom-checkbox mt-1">
-          <input type="checkbox" class="custom-control-input" id="advanced-demo-meta" v-model="meta">
-          <label class="custom-control-label" for="advanced-demo-meta">:meta</label>
+        <div class="col-6 col-md-12 px-2">
+          <div class="custom-control custom-checkbox mt-1">
+            <input type="checkbox" class="custom-control-input" id="advanced-demo-deletable" v-model="deletable">
+            <label class="custom-control-label" for="advanced-demo-deletable">:deletable</label>
+          </div>
         </div>
-      </div>
-      <div class="col-6 col-md-2 px-2">
-        <div class="custom-control custom-checkbox mt-1">
-          <input type="checkbox" class="custom-control-input" id="advanced-demo-multiple" v-model="multiple">
-          <label class="custom-control-label" for="advanced-demo-multiple">:multiple</label>
-        </div>
-      </div>
-      <div class="col-6 col-md-2 px-2">
-        <div class="custom-control custom-checkbox mt-1">
-          <input type="checkbox" class="custom-control-input" id="advanced-demo-deletable" v-model="deletable">
-          <label class="custom-control-label" for="advanced-demo-deletable">:deletable</label>
-        </div>
-      </div>
-      <div class="col-6 col-md-2 px-2">
-        <div class="custom-control custom-checkbox mt-1">
-          <input type="checkbox" class="custom-control-input" id="advanced-demo-compact" v-model="compact">
-          <label class="custom-control-label" for="advanced-demo-compact">:compact</label>
+        <div class="col-6 col-md-12 px-2">
+          <select class="custom-select custom-select-sm mt-1" v-model="theme">
+            <option selected>- Theme -</option>
+            <option value="default">Default Theme (default)</option>
+            <option value="list">List Theme (list)</option>
+          </select>
+            <!--         <div class="custom-control custom-checkbox mt-1">
+            <input type="checkbox" class="custom-control-input" id="advanced-demo-compact" v-model="compact">
+            <label class="custom-control-label" for="advanced-demo-compact">:compact</label>
+          </div> -->
         </div>
       </div>
     </div>
   </div>
 
-  <div class="mx-auto" :style="compact ? {width: '200px'} : {}">
-    <VueFileAgent
-      ref="vueFileAgent"
-      :multiple="multiple"
-      :meta="meta"
-      :deletable="deletable"
-      :compact="compact"
-      :accept="valAccept"
-      :maxSize="valMaxSize"
-      :maxFiles="valMaxFiles"
-      :helpTextOld="'Choose images or zip files'"
-      :errorTextOld="{
-        type: 'Invalid file type. Only png or zip Allowed',
-        size: 'Files should not exceed 10MB in size',
-      }"
-      @select="filesSelected($event)"
-      @delete="fileDeleted($event)"
-      v-model="filesData"
-    ></VueFileAgent>
+
+  <div class="col-md-5 col-sm-6 mb-3">
+    <div class="mx-auto" :style="compact ? {width: '200px'} : {}">
+      <VueFileAgent
+        ref="vueFileAgent"
+        :multiple="multiple"
+        :meta="meta"
+        :deletable="deletable"
+        :compact="compact"
+        :accept="valAccept"
+        :maxSize="valMaxSize"
+        :maxFiles="valMaxFiles"
+        :theme="theme"
+        @select="filesSelected($event)"
+        @delete="fileDeleted($event)"
+        v-model="filesData"
+      ></VueFileAgent>
+    </div>
   </div>
 
 
-  <div class="card card-body mt-3">
+  <div class="col-md-4 col-sm-6 mb-3">
+    <div class="bg-light p-2">
 
-    <div class="form-inlinex">
+      <div class="form-inlinex">
 
-<div class="row">
-  <div class="col-md-6">
-    <div v-if="!filesData.length">
-      No files selected
-    </div>
-    <div class="form-inline" v-if="filesData.length">
-      <label class="my-1 mr-2" for="file-select-index">With File:</label>
-<!--       <select ref="fileIdx" class="custom-select my-1 mr-sm-2" id="file-select-index" v-model="selectedIdx">
-        <option v-for="i in filesData.length" :value="i">{{ i }}</option>
-      </select> -->
-    <!-- </div><div> -->
-      <button type="button" class="btn mr-1 mb-1" v-for="(fileData, i) in filesData"
-      :class="{'btn-secondary': selectedIdx == i+1, 'btn-light': selectedIdx != i+1}"
-      @click="selectedIdx = i+1"
-      >
-        <!-- <span class="badge badge-secondary" :style="{'background-color': fileData.color}"> -->
-          {{ i + 1 }}
-        <!-- </span> -->
-      </button>
-    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div v-if="!filesData.length">
+            No files selected
+          </div>
+          <div class="form-inline" v-if="filesData.length">
+            <label class="my-1 mr-2" for="file-select-index">With File:</label>
+          <!--       <select ref="fileIdx" class="custom-select my-1 mr-sm-2" id="file-select-index" v-model="selectedIdx">
+              <option v-for="i in filesData.length" :value="i">{{ i }}</option>
+            </select> -->
+          <!-- </div><div> -->
+            <button type="button" class="btn mr-1 mb-1" v-for="(fileData, i) in filesData"
+            :class="{'btn-secondary': selectedIdx == i+1, 'btn-light': selectedIdx != i+1}"
+            @click="selectedIdx = i+1"
+            >
+              <!-- <span class="badge badge-secondary" :style="{'background-color': fileData.color}"> -->
+                {{ i + 1 }}
+              <!-- </span> -->
+            </button>
+          </div>
 
-</div>
-<div class="col-md-6">
+        </div>
+        <div class="col-md-12">
 
-<div class="row">
-      <div class="col-md-12">
-        <label class="my-1 mr-2" for="set-progress-range">Set Progess to:</label>
+            <div class="row">
+                  <div class="col-md-12">
+                    <label class="my-1 mr-2" for="set-progress-range">Set Progess to:</label>
+                  </div>
+                  <div class="col-md-12">
+                    <input type="range" min="0" max="100" ref="prgInput" @input="setProgress()" @change="setProgress()" id="set-progress-range" class="custom-range">
+                  </div>
+            </div>
+
+
+
+              <button type="button" class="btn btn-outline-secondary mb-2" @click="moveIndex(-1)">&lt;&lt;</button>
+              <button type="button" class="btn btn-outline-secondary mb-2" @click="moveIndex(1)">&gt;&gt;</button>
+              <button type="button" class="btn btn-outline-danger mb-2" @click="remove()">Remove</button>
+              <button type="button" class="btn btn-outline-primary mb-2" @click="upload()">Upload</button>
+        </div>
       </div>
-      <div class="col-md-12">
-        <input type="range" min="0" max="100" ref="prgInput" @input="setProgress()" @change="setProgress()" id="set-progress-range" class="custom-range">
+
+
+      <hr>
+
+      <div class="mb-2">
+        <button class="btn btn-outline-secondary mb-2"
+          :disabled="!filesDataForUpload.length" 
+          @click="uploadFiles()"
+        >
+          Upload Queue ({{ filesDataForUpload.length }})
+        </button>
+
+        <button class="btn btn-danger mb-2" :disabled="!filesDataInvalid.length" @click="removeInvalid()">Remove Invalid ({{ filesDataInvalid.length }})</button>
+
+        <button type="button" class="btn btn-outline-danger mb-2" @click="removeAll()" :disabled="!filesData.length">Remove All ({{ filesData.length }})</button>
       </div>
-</div>
+      <div>
+        Sort by:
+        <button type="button" class="btn btn-outline-secondary mb-2" @click="sortBy('lastModified')">Last Modified {{ sortDirection.lastModified }}</button>
+        <button type="button" class="btn btn-outline-secondary mb-2" @click="sortBy('name')">Name {{ sortDirection.name }}</button>
+      </div>
+
+      </div>
+      <!-- Move: <input type="number" ref="moveInput" value="1"> -->
+      <!-- <input type="number" ref="removeIdx" value="1"> -->
 
 
-
-      <button type="button" class="btn btn-outline-secondary mb-2" @click="moveIndex(-1)">&lt;&lt;</button>
-      <button type="button" class="btn btn-outline-secondary mb-2" @click="moveIndex(1)">&gt;&gt;</button>
-      <button type="button" class="btn btn-outline-danger mb-2" @click="remove()">Remove</button>
-      <button type="button" class="btn btn-outline-primary mb-2" @click="upload()">Upload</button>
-</div>
-</div>
-
-
-<hr>
-
-    <div class="mb-2">
-      <button class="btn btn-outline-secondary mb-2"
-        :disabled="!filesDataForUpload.length" 
-        @click="uploadFiles()"
-      >
-        Upload Queue ({{ filesDataForUpload.length }})
-      </button>
-
-      <button class="btn btn-danger mb-2" :disabled="!filesDataInvalid.length" @click="removeInvalid()">Remove Invalid ({{ filesDataInvalid.length }})</button>
-
-      <button type="button" class="btn btn-outline-danger mb-2" @click="removeAll()" :disabled="!filesData.length">Remove All ({{ filesData.length }})</button>
+      <!-- Set Progress to: -->
+      <!--     <button @click="setProgress()">
+            Set Progress 
+          </button> -->
     </div>
-    <div>
-    Sort by:
-      <button type="button" class="btn btn-outline-secondary mb-2" @click="sortBy('lastModified')">Last Modified {{ sortDirection.lastModified }}</button>
-      <button type="button" class="btn btn-outline-secondary mb-2" @click="sortBy('name')">Name {{ sortDirection.name }}</button>
-    </div>
-
-    </div>
-    <!-- Move: <input type="number" ref="moveInput" value="1"> -->
-    <!-- <input type="number" ref="removeIdx" value="1"> -->
-
-
-    <!-- Set Progress to: -->
-<!--     <button @click="setProgress()">
-      Set Progress 
-    </button> -->
   </div>
 
 </div>
