--- a/website/demo/basic.html
+++ b/website/demo/basic.html
@@ -1,11 +1,23 @@
 {% raw %}
-<div class="appa">
+<div>
   <VueFileAgent
     v-model="filesData"
     @select="filesSelected($event)"
     deletable
+    :theme="theme"
     @delete="fileDeleted($event)"
-  ></VueFileAgent>
+  >
+    <template v-slot:before-outer>
+      <div class="mb-3 text-right">
+        Switch theme to
+        <!-- <a href="#" @click.prevent="switchTheme()">Switch</a> -->
+        <button class="btn btn-sm btn-outline-warning" @click="switchTheme()">
+          <span v-if="theme != 'list'">List View</span>
+          <span v-if="theme == 'list'">Grid View</span>
+        </button>
+      </div>
+    </template >
+  </VueFileAgent>
 <!--   <div>
     Move: <input type="number" ref="moveInput" value="1">
     <button @click="moveIndex(-1)">&lt;&lt;</button>
