Update docs website

--- a/upload-server-examples/index.html
+++ b/upload-server-examples/index.html
@@ -12,7 +12,7 @@
 
     <meta
       name="twitter:image:src"
-      content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.5.3-beta.2"
+      content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.6.0"
     />
     <meta name="twitter:site" content="@safrazik" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -22,10 +22,7 @@
       content="Full featured drag & drop enabled Vue file upload component with previews and upload progress"
     />
 
-    <meta
-      property="og:image"
-      content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.5.3-beta.2"
-    />
+    <meta property="og:image" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png?v=1.6.0" />
     <meta property="og:site_name" content="GitHub" />
     <meta property="og:type" content="object" />
     <meta property="og:title" content="Vue File Agent" />
@@ -46,8 +43,8 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/styles.css?v=1.5.3-beta.2" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@1.5.3-beta.2/dist/vue-file-agent.css" />
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/styles.css?v=1.6.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@1.6.0/dist/vue-file-agent.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146428731-2"></script>
@@ -74,7 +71,7 @@
         <a class="navbar-brand" href="http://safrazik.github.io/vue-file-agent/">
           <img
             style="width: 40px; height: 40px; border-radius: 50%;"
-            src="http://safrazik.github.io/vue-file-agent/website/assets/logo.png?v=1.5.3-beta.2"
+            src="http://safrazik.github.io/vue-file-agent/website/assets/logo.png?v=1.6.0"
           />
           Vue File Agent
         </a>
@@ -112,7 +109,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tus-js-client@1.8.0/dist/tus.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@1.5.3-beta.2/dist/vue-file-agent.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@1.6.0/dist/vue-file-agent.umd.js"></script>
 
     <script src="https://unpkg.com/vue-slicksort@latest/dist/vue-slicksort.min.js"></script>
 
