--- a/packages/core-file-agent/tests/index.html
+++ b/packages/core-file-agent/tests/index.html
@@ -19,8 +19,11 @@
   <body>
     <h3>File Icon</h3>
     <div style="border: 1px solid green; width: 100px;" id="file-icon-wrapper"></div>
-    <h3>File Preview</h3>
 
+    <h3>File Agent</h3>
+    <div id="file-agent-wrapper"></div>
+
+    <h3>File Preview</h3>
     <div style="border: 1px solid blue;">
       <div class="theme-default">
         <div class="vue-file-agent grid-block-wrapper" style="padding: 0;" id="file-preview-blocks-container">
@@ -29,19 +32,12 @@
       </div>
     </div>
 
-    <h3>File Agent</h3>
-    <div style="border: 1px solid brown;" id="file-agent-wrapper"></div>
     <script src="../dist/core-file-agent.js"></script>
     <script>
       var FileAgent = window['core-file-agent'].FileAgent;
       var FileIcon = window['core-file-agent'].FileIcon;
       var FilePreview = window['core-file-agent'].FilePreview;
       var FileRecord = window['core-file-agent'].FileRecord;
-
-      var fileAgent = new FileAgent({
-        multiple: false,
-      });
-      fileAgent.render(document.getElementById('file-agent-wrapper'));
 
       var fileIcon = new FileIcon({
         ext: 'pdf',
@@ -93,6 +89,24 @@
       var container = document.getElementById('file-preview-blocks-container');
 
       FileRecord.fromRawArray(rawFileRecords, { read: false, maxSize: '4MB' }).then(function (fileRecords) {
+        var fileAgent = new FileAgent({
+          multiple: true,
+          fileRecords: fileRecords,
+          deletable: true,
+          editable: true,
+          linkable: true,
+          maxSize: '4MB',
+          onBeforeDelete: function (fileRecord, callback) {
+            console.log('onBeforrrrrr', fileRecord.name());
+            if (true || confirm('Sure?')) {
+              callback();
+            }
+          },
+        });
+        fileAgent.render(document.getElementById('file-agent-wrapper'));
+      });
+
+      FileRecord.fromRawArray(rawFileRecords, { read: false, maxSize: '4MB' }).then(function (fileRecords) {
         for (var i = 0; i < fileRecords.length; i++) {
           var fileRecord = fileRecords[i];
           var filePreview = new FilePreview({
@@ -114,6 +128,7 @@
           filePreview.render(child);
         }
       });
+
       // var fileRecord = FileRecord.fromRawSync(
       //   {
       //     name: 'Some Large File.zip',
