Improve file rename

--- a/packages/core-file-agent/tests/index.html
+++ b/packages/core-file-agent/tests/index.html
@@ -6,6 +6,7 @@
     <title>File Agent Test</title>
     <meta name="description" content="File Agent Component Live HTML test" />
     <meta name="author" content="Safraz Razik" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- <link
       rel="stylesheet"
@@ -68,7 +69,7 @@
           size: 14403,
           type: 'image/jpeg',
           ext: 'jpg',
-          url: 'https://safrazik.com/vue-file-agent/website/assets/files/House Sparrow.jpg',
+          url: 'files/House Sparrow.jpg',
           progress: 67,
         },
         {
@@ -82,8 +83,8 @@
             width: 640,
             height: 360,
           },
-          url: 'https://safrazik.com/vue-file-agent/website/assets/files/Golf.mp4',
-          videoThumbnail: 'https://safrazik.com/vue-file-agent/website/assets/files/Golf-thumb.jpg',
+          url: 'files/Golf.mp4',
+          videoThumbnail: 'files/Golf-thumb.jpg',
           imageColor: [66, 62, 45],
         },
         {
@@ -93,7 +94,7 @@
           size: 3028,
           type: 'application/pdf',
           ext: 'pdf',
-          url: 'https://safrazik.com/vue-file-agent/website/assets/files/sample.pdf',
+          url: 'files/sample.pdf',
         },
       ];
 
