Update react demo

--- a/packages/react/demo/index.html
+++ b/packages/react/demo/index.html
@@ -9,6 +9,16 @@
     <title>React File Agent Test</title>
 
     <link rel="stylesheet" href="../dist/file-agent.css" />
+    <style type="text/css">
+      #file-icon-wrapper {
+        color: #fff;
+        background: purple;
+        width: 100px;
+      }
+      #file-icon-wrapper svg {
+        fill: currentColor;
+      }
+    </style>
   </head>
   <body>
     <!-- React app root element -->
