--- a/packages/core/demo/index.html
+++ b/packages/core/demo/index.html
@@ -22,7 +22,7 @@
     <fieldset id="file-drag-area">
       <legend>Drag Area</legend>
       CI
-      <h3>File Icon</h3>
+      <h3>File Icon Vilakku:<span id="vilakku"></span></h3>
       <div style="border: 1px solid green; width: 100px;" id="file-icon-wrapper"></div>
 
       <h3>File Agent</h3>
@@ -49,6 +49,7 @@
       var FileIcon = window['file-agent'].FileIcon;
       var FilePreview = window['file-agent'].FilePreview;
       var FileRecord = window['file-agent'].FileRecord;
+      var vilakku = window['file-agent'].vilakku;
       var plugins = window['file-agent'].plugins;
 
       plugins.tus = window.tus;
@@ -215,6 +216,7 @@
       //   },
       //   { read: false },
       // );
+      document.getElementById('vilakku').innerText = vilakku;
     </script>
   </body>
 </html>
