Improve build flow

--- a/packages/react/index.html
+++ b/packages/react/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Vue File Agent Component Live HTML test" />
+    <meta name="description" content="React File Agent Component Live HTML test" />
     <meta name="author" content="Safraz Razik" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Vue File Agent Test</title>
+    <title>React File Agent Test</title>
 
-    <link rel="stylesheet" href="../dist/file-agent.css" />
+    <link rel="stylesheet" href="react-file-agent-demo.css" />
     <style type="text/css">
       #file-icon-wrapper {
         color: #fff;
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <!-- Vue app root element -->
+    <!-- React app root element -->
     <div id="root"></div>
 
     <!-- Load React. -->
@@ -29,6 +29,6 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.min.js"></script>
-    <script src="../dist/vue-file-agent-demo.js"></script>
+    <script src="react-file-agent-demo.js"></script>
   </body>
 </html>
