--- a/packages/core/index.html
+++ b/packages/core/index.html
@@ -36,7 +36,7 @@
       <h3>File Preview</h3>
       <div style="border: 1px solid blue;">
         <div class="theme-default">
-          <div class="vue-file-agent grid-block-wrapper" style="padding: 0;" id="file-preview-blocks-container">
+          <div class="file-agent grid-block-wrapper" style="padding: 0;" id="file-preview-blocks-container">
             <!-- <div id="file-preview-wrapper" class="file-preview-wrapper grid-box-item grid-block"></div> -->
           </div>
         </div>
